# osm-models-rs

./: Cargo.toml
src/: lib.rs  node.rs  relation.rs  tag.rs  way.rs
src/old/: base.ts  index.ts  node.ts  overpass.ts  relation.ts  tag.ts  way.ts
src/overpass/: mod.rs
src/tag/: access.rs  mod.rs  relation.rs  restriction.rs  surface.rs  way_type.rs
