[package]
name = "osm_models"
version = "0.9.0"
authors = ["Jason Abbott <you@example.com>"]
edition = "2018"
license = "MIT"
homepage = ""
repository = "https://github.com/toba/osm-models-rs.git"
readme = "README.md"

[dependencies]
hashbrown = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.4"
